<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pius App for Android</string>

    <string name="button_mycourses">Meine Kurse</string>
    <string name="button_login">Anmelden</string>
    <string name="button_logout">Abmelden</string>
    <string name="button_welcome_start">Jetzt loslegen</string>
    <string name="button_confirm">Verstanden</string>

    <string name="welcome_new_in_version">Neu in der Version 1.7.0:</string>
    <string name="welcome_new_1">Beim Login wird nun Autofill unterstützt.</string>
    <string name="welcome_new_2">Im Lehrer-Popup wird nun die E-Mail-Adresse angezeigt.</string>
    <string name="welcome_new_3">Teile der App haben ein neues, moderneres Design bekommen.</string>
    <string name="welcome_new_4">Wir haben behoben, dass Einträge in der Kursliste nicht mehr doppelt angezeigt werden.</string>
    <string name="welcome_title_overview">Funktionen im Überblick:</string>
    <string name="welcome_function_today">Auf der Heute-Seite hast Du alles Wichtige im Blick.</string>
    <string name="welcome_function_vertretungsplan">Greife mit der App ganz einfach auf den gesamten aktuellen Vertretungsplan zu.</string>
    <string name="welcome_function_dashboard">Wähle Klasse oder Jahrgangsstufe aus und personalisiere Deinen Vetretungsplan. Verwende das Widget und werde bei Änderungen benachrichtigt.</string>
    <string name="welcome_function_calendar">Dursuche ganz einfach mit dem Kalender die Termine der Schule.</string>


    <string name="title_widget">Pius App Vertretungsplan</string>
    <string name="title_home">Heute</string>
    <string name="title_substitution_schedule">Vertretungsplan</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">Kalender</string>
    <string name="title_news">News</string>
    <string name="title_postings">Benachrichtigungen</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_eva">EVA</string>
    <string name="title_add_courses">Kurse hinzufügen</string>
    <string name="title_my_subst_schedule_changes">Deine Änderungen am Vertretungsplan</string>
    <string name="title_logon">Anmelden</string>
    <string name="title_logout">Abmelden</string>
    <string name="title_delete_course_list_all">Kursliste löschen</string>
    <string name="title_activity_schedule_changed">ScheduleChangedActivity</string>
    <string name="title_whats_new">What\'s New</string>
    <string name="title_tip">Tipp</string>
    <string name="title_peferences_general">Allgemein</string>
    <string name="title_peferences_about">Über die App</string>

    <string name="label_add_grade_and_courses">Gib bitte für Deinen persönlichen Vertretungsplan und zur Verwendung des Dashboards Deine Klasse bzw. Jahrgangsstufe ein.</string>
    <string name="label_add_pius_credentials">Gib bitte den Benutzernamen und das Passwort für den Zugang zur Pius-Gymnasium Web-Seite an. Zum Anmelden benötigst Du eine Internetverbindung.</string>
    <string name="label_app_name">Pius-App für Android Version %v</string>
    <string name="label_copyright">
        © Felix Krings und Michael Mosler-Krings\n
        \nUnter https://github.com/michael-mosler/Pius-App-for-Android findest Du weitere Infos zur App.
        Informationen zu unserer Datenschutzrichtlinie findest Du unter https://github.com/michael-mosler/Pius-App-for-Android/wiki/Datenschutzrichtlinie.
        \n\nWir verwenden Picasso (https://square.github.io/picasso/) für das Laden, Caching und Anzeigen von Bildern.
        \n\nManche Icons in der App sind von Bootstrap (https://icons.getbootstrap.com)
    </string>

    <string name="label_grade">Jahrgangsstufe</string>
    <string name="label_class">Klasse</string>
    <string name="label_username">Benutzername</string>
    <string name="label_password">Passwort</string>
    <string name="label_delete">Löschen</string>
    <string name="label_delete_all">Alles löschen</string>
    <string name="label_search">Suchen</string>
    <string name="label_eva">EVA</string>
    <string name="label_enter_course">Oder zum Bearbeiten drücken.</string>

    <string name="label_deleted">Gelöscht</string>
    <string name="label_changed">Geändert</string>
    <string name="label_added">Hinzugefügt</string>

    <string name="text_logged_on" tools:keep="@string/text_logged_on">Du bist nun angemeldet.</string>
    <string name="text_invalid_credentials" tools:keep="@string/text_invalid_credentials">Die Anmeldedaten sind ungültig.</string>
    <string name="text_logon_error" tools:keep="@string/text_logon_error">Es ist ein Fehler aufgetreten. Bitte überprüfe Deine Internetverbindung und versuche es noch einmal.</string>
    <string name="text_last_changed">Letzte Änderung</string>
    <string name="text_confirm_delete_course_list">Bist Du sicher, dass Du die gesamte Kursliste löschen möchtest?</string>
    <string name="text_course_list_info">Hier legst Du fest, welche Kurse im Dashboard und bei Push-Benachrichtigungen berücksichtigt werden.</string>
    <string name="text_empty_schedule">Heute hast Du keinen Vertretungsunterricht.</string>
    <string name="text_empty_future_schedule">In den nächsten Tagen hast Du keinen Vertretungsunterricht.</string>
    <string name="text_no_eva">Du hast im Moment keine EVA-Aufträge.</string>
    <string name="text_confirm_logout">Möchtest Du dich wirklich abmelden?</string>

    <string name="text_intro">
        Melde Dich in den Einstellungen an, um Zugriff auf den Vertretungsplan zu haben. Du kannst auch Deine Klasse/Jahrgangsstufe und in der Oberstufe Deine Kursliste einstellen, und so Deinen "persönlichen" Vertretungsplan im Dashboard anzeigen lassen.
    </string>

    <string name="error_cannot_use_vertretungsplan">Melde Dich in den Einstellungen an, um den Vertretungsplan zu verwenden.\n
        \nTippe unten auf Einstellungen, um mit der Konfiguration zu beginnen.
    </string>
    <string name="error_cannot_use_dashboard">Melde Dich in den Einstellungen an und lege Deine Klasse/Jahrgangsstufe fest, um das Dashboard zu verwenden. Wenn Du in der Oberstufe bist, musst Du auch Deine Kursliste hinzufügen, um ein personalisiertes Dashboard zu erhalten.\n
        \nTippe unten auf Einstellungen, um mit der Konfiguration zu beginnen.
    </string>
    <string name="error_cannot_use_dashboard_widget">Melde Dich in den Einstellungen an und lege Deine Klasse/Jahrgangsstufe fest, um das Widget zu verwenden. Wenn Du in der Oberstufe bist, musst Du auch Deine Kursliste hinzufügen, um ein personalisiertes Dashboard zu erhalten.
    </string>
    <string name="error_failed_to_load_data">Die Daten konnten leider nicht geladen werden.</string>
    <string name="error_no_data">Es gibt noch keine Daten, die das Widget anzeigen kann. Warte auf eine Push-Benachrichtigung oder öffne das Dashboard, um Deinen Vetretungsplan zu laden.</string>
    <string name="general">Allgemein</string>
    <string name="advanced">Erweitert</string>
    <string name="about">About</string>
</resources>
