<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_today_blue"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_substitution_schedule"
        android:icon="@drawable/ic_list_blue"
        android:title="@string/title_substitution_schedule" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_star_blue"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_blue"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_blue"
        android:title="@string/title_settings" />

</menu>
